force-app/main/default/objects/MortgageJunction_Config__mdt/MortgageJunction_Config__mdt.object-meta.xml
<CustomObject>
    <description>Basic App settings to work with FIlogix and do other package automations</description>
    <label>MortgageJunction Config</label>
    <pluralLabel>MortgageJunction Configs</pluralLabel>
</CustomObject>