force-app/main/default/objects/MortgageJunction_Config__mdt/fields/FirmCode__c.field-meta.xml
<CustomField>
    <fullName>FirmCode__c</fullName>
    <label>FirmCode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>