force-app/main/default/objects/MortgageJunction_Config__mdt/fields/PersonAccount_RecordType__c.field-meta.xml
<CustomField>
    <fullName>PersonAccount_RecordType__c</fullName>
    <description>Default PersonAccount Record type for Applicant Creation through the MJ</description>
    <inlineHelpText>Default PersonAccount Record type for Applicant Creation through the MJ</inlineHelpText>
    <label>PersonAccount RecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>